--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <a class="logo" href="/"> Maria's atelier</a>
         <ul class="nav-list">
-          <li><a href="#">Início</a></li>
+          <li><a href="https://mariasatelier.github.io/Marias-atelier-inicio/">Início</a></li>
           <li><a href="#">Vendas</a></li>
           <li><a href="#">Suporte</a></li>
         </ul>
