--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="logo" href="/"> Maria's atelier</a>
         <ul class="nav-list">
           <li><a href="https://mariasatelier.github.io/Marias-atelier-inicio/">Início</a></li>
-          <li><a href="#">Vendas</a></li>
+          <li><a href="https://mariasatelier.github.io/Marias-atelier-vendas/">Vendas</a></li>
           <li><a href="#">Suporte</a></li>
         </ul>
       </nav>
