--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="https://giusande.github.io/jjhv/">Início</a></li>
+          <li><a href="https://mariasatelier.github.io/Marias-atelier-inicio/">Início</a></li>
           <li><a href="https://mariasatelier.github.io/Marias-atelier-vendas/">Vendas</a></li>
           <li><a href="https://mariasatelier.github.io/Marias-atelier-suporte/">Suporte</a></li>
         </ul>
